--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 										<h2><a href="#">Coffee sales<br />
 										Project</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="https://hasanmibrahim.github.io/HasanPortfolio.github.io/images/pic12.JPG" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://hasanmibrahim.github.io/HasanPortfolio.github.io/images/pic12.jpg" alt="" /></a>
 									<p>Interactive dashboard on Excel displaying coffee sales<br /> 
 									                   at a coffee shop.</p>
 									<ul class="actions special">
