--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 										<h2><a href="#">Electric Car<br />
 										 Sales Project</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="hasanmibrahim.github.io/HasanPortfolio.github.io/images/pic11.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="https://hasanmibrahim.github.io/HasanPortfolio.github.io/images/pic11.JPG" alt="" /></a>
 									<p>   <p></p>    SQL + Tableau Visualization of the <br />
 									  electric cars sold from 2012-22 globally.</p>
 									<ul class="actions special">
