--- a/index.html
+++ b/index.html
@@ -97,12 +97,10 @@
 								<article>
 									<header>
 										
-										<h2><a href="#">FUTURE PROJECT<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Project coming soon, stay tuned.</p>
+									<a href="#" class="image fit"><img src="images/pic13.png" alt="" /></a>
+									<p>An automated webscraper created in Python that gathers the data of a certain item daily and exports it into a CSV file.</p>
 									<ul class="actions special">
+										<li><a href="https://github.com/HasanMIbrahim/PortfilioProjects/blob/main/Amazon%20Webscraper.ipynb" class="button" target="_blank">See More</a></li>
 										
 									</ul>
 								</article>
