--- a/index.html
+++ b/index.html
@@ -96,12 +96,13 @@
 								</article>
 								<article>
 									<header>
-										
-									<a href="#" class="image fit"><img src="images/pic13.png" alt="" /></a>
+									        <h2><a href="#">Automated WebScraping Amazon Project<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="https://hasanmibrahim.github.io/HasanPortfolio.github.io/images/pic13.png" alt="" /></a>
 									<p>An automated webscraper created in Python that gathers the data of a certain item daily and exports it into a CSV file.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/HasanMIbrahim/PortfilioProjects/blob/main/Amazon%20Webscraper.ipynb" class="button" target="_blank">See More</a></li>
-										
 									</ul>
 								</article>
 								<article>
